# bevy_transvoxels_demo

./: LICENSE-APACHE  LICENSE-MIT  README.md
bevyblocks/: Cargo.toml  README.md
bevyblocks/assets/textures/: terrain_normal_array.ktx2
bevyblocks/src/: main copy 1.rs  main copy.rs  main.rs
plumesplat/: Cargo.toml  README.md
plumesplat/docs/: FEATURE_ROADMAP.md
plumesplat/examples/: basic.rs
plumesplat/src/: builder.rs  lib.rs  material.rs  plugin.rs  vertex_attributes.rs
plumesplat/src/shaders/: blending.wgsl  plumesplat.wgsl  plumesplat_ext copy.wgsl  plumesplat_ext.wgsl  triplanar.wgsl
plumesplat/tools/: combine_textures.rs
